# BeatSync

./: CMakeLists.txt
include/: BeatSyncConfig.h.in  CMakeLists.txt  GenericButton.h  Metronome.h  MetronomeButton.h  TempoText.h
src/: BeatSync.cpp  CMakeLists.txt  GenericButton.cpp  Metronome.cpp  MetronomeButton.cpp  TempoText.cpp
